@@ -1,3 +1,6 @@
+2002-10-31  Bill Bumgarner  <bbum@codefab.com>
+	* Added support for NSSet in the convenience methods.
+
 2002-10-30  Bill Bumgarner  <bbum@codefab.com>
 	* Many, many changes to the convenience methods in the objc
 	module.  Wrote a bunch of tests in test_nsarray and
